[package]
name = "tower-cache"
description = "Caching layer for Tower"
version = "0.0.1"
edition = "2021"
authors = ["nicolas.moutschen@gmail.com"]
license = "MIT"
repository = "https://github.com/nmoutschen/tower-cache"

[dependencies]
lru = { version = "0.7", optional = true }
tower = { version = "0.4", features = ["util"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[features]
default = ["lru"]